--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rancher-redeploy",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "A simple script to redeploy a rancher workload.",
   "main": "deploy.js",
   "scripts": {
@@ -13,5 +13,8 @@
     "deploy"
   ],
   "author": "Christopher S. Case <chris.case@g33xnexus.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "ofetch": "^1.3.4"
+  }
 }
