feat: bundle code

--- a/action.yml
+++ b/action.yml
@@ -10,6 +10,6 @@ branding:
     color: blue
 runs:
     using: node20
-    main: deploy.js
+    main: dist/index.js
 
 #-----------------------------------------------------------------------------------------------------------------------
