--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "rancher-redeploy",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "description": "A simple script to redeploy a rancher workload.",
   "main": "deploy.js",
   "scripts": {
     "start": "node ./deploy.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "package": "ncc build src/index.ts -o dist --source-map --license licenses.txt"
   },
   "keywords": [
     "rancher2",
@@ -15,6 +16,11 @@
   "author": "Christopher S. Case <chris.case@g33xnexus.com>",
   "license": "MIT",
   "dependencies": {
-    "ofetch": "^1.3.4"
+    "@vercel/ncc": "^0.38.1",
+    "ofetch": "^1.3.4",
+    "typescript": "^5.5.3"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.10"
   }
 }
