--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
   "name": "rancher-redeploy",
-  "version": "0.5.3",
+  "version": "0.6.0",
   "description": "A simple script to redeploy a rancher workload.",
-  "main": "deploy.js",
+  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "start": "node ./deploy.js",
+    "start": "node ./dist/index.js",
+    "lint": "eslint . --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "package": "ncc build src/index.ts -o dist --source-map --license licenses.txt"
+    "prepack": "ncc build src/index.ts -o dist --source-map --license licenses.txt"
   },
   "keywords": [
     "rancher2",
     "workload",
     "deploy"
   ],
-  "author": "Christopher S. Case <chris.case@g33xnexus.com>",
+  "author": "Ahad Birang <farnabaz@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@vercel/ncc": "^0.38.1",
-    "ofetch": "^1.3.4",
-    "typescript": "^5.5.3"
+    "ofetch": "^1.3.4"
   },
   "devDependencies": {
-    "@types/node": "^20.14.10"
+    "typescript": "^5.5.3",
+    "@vercel/ncc": "^0.38.1",
+    "@nuxt/eslint-config": "^0.3.13",
+    "@types/node": "^20.14.10",
+    "eslint": "^9.5.0"
   }
 }
